--- a/paper/Reduction.lagda.tex
+++ b/paper/Reduction.lagda.tex
@@ -1,6 +1,7 @@
 \begin{code}[hide]
+{-# OPTIONS --rewriting #-}
 open import Data.Bool using (Bool; true; false; if_then_else_)
-open import Data.Product using (_×_; _,_; ∃; ∃-syntax)
+open import Data.Product using (_×_; _,_; ∃; Σ; Σ-syntax; ∃-syntax)
 open import Relation.Binary.PropositionalEquality using (_≡_; refl; sym; cong; cong₂)
 open import Data.List.Base using (List; []; _∷_; [_]; _++_)
 open import Data.List.Properties using (++-assoc)
@@ -17,21 +18,21 @@ open import Congruence
 
 \begin{code}[hide]
 weakening : ∀{Γ Γ₁ Γ₂} (un : Un Γ₁) → Γ ≃ Γ₁ + Γ₂ → Process Γ₂ → Process Γ
-weakening un p P = #process (+++# p) (aux un P)
+weakening un p P = ↭process (↭concat p) (aux un P)
   where
     aux : ∀{Γ₁ Γ₂} (un : Un Γ₁) → Process Γ₂ → Process (Γ₁ ++ Γ₂)
     aux un-[] P = P
-    aux (un-∷ un) P = weaken (split-l +-unit-l) (aux un P)
+    aux (un-∷ un) P = weaken (< ≫) (aux un P)
 
 contraction : ∀{Γ Γ₁ Γ₂} (un : Un Γ₁) → Γ ≃ Γ₁ + Γ₂ → Process (Γ₁ ++ Γ) → Process Γ
-contraction un p P = #process (+++# p) (aux un (#process (#left (#sym (+++# p))) P))
+contraction un p P = ↭process (↭concat p) (aux un (↭process (↭left (↭sym (↭concat p))) P))
   where
     aux : ∀{Γ₁ Γ₂} → Un Γ₁ → Process (Γ₁ ++ Γ₁ ++ Γ₂) → Process (Γ₁ ++ Γ₂)
     aux un-[] P = P
-    aux {¿ A ∷ Γ₁} {Γ₂} (un-∷ un) P with contract (split-l +-unit-l) (#process (#shift {¿ A ∷ Γ₁} {¿ A} {Γ₁ ++ Γ₂}) P)
-    ... | P₁ rewrite sym (++-assoc (¿ A ∷ Γ₁) Γ₁ Γ₂) with #process (#sym (#shift {Γ₁ ++ Γ₁} {¿ A})) P₁
-    ... | P₂ rewrite ++-assoc Γ₁ Γ₁ (¿ A ∷ Γ₂) with aux un P₂
-    ... | P₃ = #process #shift P₃
+    aux {`? A ∷ Γ₁} {Γ₂} (un-∷ un) P with contract (< ≫) (↭process (↭shift {`? A} {`? A ∷ Γ₁} {Γ₁ ++ Γ₂}) P)
+    ... | P₁ rewrite sym (++-assoc (`? A ∷ Γ₁) Γ₁ Γ₂) with ↭process (↭sym (↭shift {`? A} {Γ₁ ++ Γ₁})) P₁
+    ... | P₂ rewrite ++-assoc Γ₁ Γ₁ (`? A ∷ Γ₂) with aux un P₂
+    ... | P₃ = ↭process ↭shift P₃
 \end{code}
 
 Just like structural precongruence, reduction is formalized as a binary relation
@@ -49,9 +50,8 @@ Let us comment a representative selection of them.
 The constructor \AgdaInductiveConstructor{r-link} models \RLink. 
 
 \begin{code}
-  r-link      : ∀{Δ A B} {P : Process (B ∷ Δ)}
-                (d : Dual A B) (e : Dual A B) (p : Γ ≃ B , Δ) →
-                cut d p (link e (split-l (split-r split-e))) P ↝ #process (#cons p) P
+  r-link      : ∀{Δ A P} (p : Γ ∋ dual A ⊳ Δ) →
+                cut {A} p (link (< > •)) P ↝ ↭process (↭concat p) P
 \end{code}
 
 For generality, the rules quantifies over two proofs $d$ and $e$ of the same
@@ -75,8 +75,8 @@ $p$.
 The constructor \AgdaInductiveConstructor{r-close} models \RClose:
 
 \begin{code}
-  r-close     : ∀{P : Process Γ} (p₀ : Γ ≃ [] + Γ) (q₀ : Γ ≃ [] + Γ) →
-                cut d-𝟙-⊥ p₀ close (wait (split-l q₀) P) ↝ P
+  r-close     : ∀{P} (p₀ : Γ ≃ [] + Γ) (q₀ : Γ ≃ [] + Γ) →
+                cut p₀ close (wait (< q₀) P) ↝ P
 \end{code}
 
 While the \AgdaInductiveConstructor{close} constructor implicitly refers to the
@@ -100,13 +100,10 @@ The constructor \AgdaInductiveConstructor{r-select-l} models \RSelect when the
 selected tag is $\InTag_1$, that is \AgdaInductiveConstructor{true} in Agda:
 
 \begin{code}
-  r-select-l  : ∀{Γ₁ Γ₂ A A′ B B′}
-                {P : Process (A ∷ Γ₁)} {Q : Process (A′ ∷ Γ₂)} {R : Process (B′ ∷ Γ₂)}
-                (d : Dual A A′) (e : Dual B B′)
+  r-left      : ∀{Γ₁ Γ₂ A B P Q R}
                 (p : Γ ≃ Γ₁ + Γ₂) (p₀ : Γ₁ ≃ [] + Γ₁) (q₀ : Γ₂ ≃ [] + Γ₂) →
-                cut (d-⊕-& d e) p
-                    (select true (split-l p₀) P)
-                    (case (split-l q₀) Q R) ↝ cut d p P Q
+                cut {A ⊕ B} p (left (< p₀) P)
+                              (case (< q₀) Q R) ↝ cut p P Q
 \end{code}
 
 There is not much more to note here (and in other omitted reduction rules),
@@ -117,51 +114,31 @@ $\Context_i \simeq \AgdaInductiveConstructor{[]} + \Context_i$ and the use of
 the one restricted by the cut.
 
 \begin{code}[hide]
-  r-select-r  :
-    ∀{Γ₁ Γ₂ A A′ B B′}
-    {P : Process (B ∷ Γ₁)} {Q : Process (A′ ∷ Γ₂)} {R : Process (B′ ∷ Γ₂)}
-    (d : Dual A A′) (e : Dual B B′) (p : Γ ≃ Γ₁ + Γ₂) (p₀ : Γ₁ ≃ [] + Γ₁) (q₀ : Γ₂ ≃ [] + Γ₂) →
-    cut (d-⊕-& d e) p
-        (select false (split-l p₀) P)
-        (case (split-l q₀) Q R) ↝ cut e p P R
-
-  r-fork      :
-    ∀{Γ₁ Γ₂ Γ₃ Δ A B A′ B′}
-    {P : Process (A ∷ Γ₁)} {Q : Process (B ∷ Γ₂)} {R : Process (B′ ∷ A′ ∷ Γ₃)}
-    (d : Dual A A′) (e : Dual B B′) (p : Γ ≃ Δ + Γ₃) (p₀ : Γ₃ ≃ [] + Γ₃)
-    (q : Δ ≃ Γ₁ + Γ₂) (q₀ : Δ ≃ [] + Δ) →
-    let _ , p′ , q′ = +-assoc-l p q in
-    cut (d-⊗-⅋ d e) p
-        (fork (split-l q₀) q P Q)
-        (join (split-l p₀) R) ↝ cut d q′ P (cut e (split-r p′) Q R)
-
-  r-client    :
-    ∀{Γ₁ Γ₂ A A′}
-    {P : Process (A ∷ Γ₁)} {Q : Process (A′ ∷ Γ₂)} (d : Dual A A′)
-    (p : Γ ≃ Γ₁ + Γ₂) (p₀ : Γ₁ ≃ [] + Γ₁) (q₀ : Γ₂ ≃ [] + Γ₂) (un : Un Γ₁) →
-    cut (d-!-? d) p
-      (server (split-l p₀) un P)
-      (client (split-l q₀) Q) ↝ cut d p P Q
-
-  r-weaken    :
-    ∀{Γ₁ Γ₂ A A′}
-    {P : Process (A ∷ Γ₁)} {Q : Process Γ₂}
-    (d : Dual A A′) (p : Γ ≃ Γ₁ + Γ₂) (p₀ : Γ₁ ≃ [] + Γ₁) (q₀ : Γ₂ ≃ [] + Γ₂) (un : Un Γ₁) →
-    cut (d-!-? d) p
-        (server (split-l p₀) un P)
-        (weaken (split-l q₀) Q) ↝ weakening un p Q
-
-  r-contract  :
-    ∀{Γ₁ Γ₂ A A′}
-    {P : Process (A ∷ Γ₁)} {Q : Process (¿ A′ ∷ ¿ A′ ∷ Γ₂)}
-    (d : Dual A A′) (p : Γ ≃ Γ₁ + Γ₂) (p₀ : Γ₁ ≃ [] + Γ₁) (q₀ : Γ₂ ≃ [] + Γ₂) (un : Un Γ₁) →
-    cut (d-!-? d) p
-      (server (split-l p₀) un P)
-      (contract (split-l q₀) Q) ↝
-      contraction un p
-        (cut (d-!-? d) ++≃+
-             (server (split-l p₀) un P)
-             (cut (d-!-? d) (split-r p) (server (split-l p₀) un P) Q))
+  r-right     : ∀{Γ₁ Γ₂ A B P Q R}
+                (p : Γ ≃ Γ₁ + Γ₂) (p₀ : Γ₁ ≃ [] + Γ₁) (q₀ : Γ₂ ≃ [] + Γ₂) →
+                cut {A ⊕ B} p (right (< p₀) P)
+                              (case (< q₀) Q R) ↝ cut p P R
+  r-fork      : ∀{Γ₁ Γ₂ Γ₃ Δ A B P Q R}
+                (p : Γ ≃ Δ + Γ₃) (p₀ : Γ₃ ≃ [] + Γ₃) (q : Δ ≃ Γ₁ + Γ₂) (q₀ : Δ ≃ [] + Δ) →
+                let _ , p′ , q′ = +-assoc-l p q in
+                cut {A ⊗ B} p (fork (< q₀) q P Q)
+                              (join (< p₀) R) ↝ cut q′ P (cut (> p′) Q R)
+  r-client    : ∀{Γ₁ Γ₂ A P Q}
+                (p : Γ ≃ Γ₁ + Γ₂) (p₀ : Γ₁ ≃ [] + Γ₁) (q₀ : Γ₂ ≃ [] + Γ₂) (un : Un Γ₁) →
+                cut {`! A} p (server (< p₀) un P) (client (< q₀) Q) ↝ cut p P Q
+  r-weaken    : ∀{Γ₁ Γ₂ A P Q}
+                (p : Γ ≃ Γ₁ + Γ₂) (p₀ : Γ₁ ≃ [] + Γ₁) (q₀ : Γ₂ ≃ [] + Γ₂) (un : Un Γ₁) →
+                cut {`! A} p (server (< p₀) un P)
+                             (weaken (< q₀) Q) ↝ weakening un p Q
+  r-contract  : ∀{Γ₁ Γ₂ A P Q}
+                (p : Γ ≃ Γ₁ + Γ₂) (p₀ : Γ₁ ≃ [] + Γ₁) (q₀ : Γ₂ ≃ [] + Γ₂) (un : Un Γ₁) →
+                cut {`! A} p (server (< p₀) un P)
+                             (contract (< q₀) Q) ↝
+                    contraction un p
+                      (cut ++≃+ (server (< p₀) un P)
+                      (cut (> p) (server (< p₀) un P) Q))
+  r-poly       : ∀{A B Γ₁ Γ₂ P F} (p : Γ ≃ Γ₁ + Γ₂) (p₀ : Γ₁ ≃ [] + Γ₁) (q₀ : Γ₂ ≃ [] + Γ₂) ->
+                 cut {`∃ A} p (ex {_} {B} (< p₀) P) (all (< q₀) F) ↝ cut p P (F B)
 \end{code}
 
 Reduction is closed under cuts and by structural pre-congruence as per \RCut and
@@ -169,10 +146,8 @@ Reduction is closed under cuts and by structural pre-congruence as per \RCut and
 below:
 
 \begin{code}
-  r-cut       : ∀{Γ₁ Γ₂ A B} {P Q : Process (A ∷ Γ₁)} {R : Process (B ∷ Γ₂)}
-                (d : Dual A B) (q : Γ ≃ Γ₁ + Γ₂) → P ↝ Q →
-                cut d q P R ↝ cut d q Q R
-
-  r-cong      : ∀{P R Q : Process Γ} → P ⊒ R → R ↝ Q → P ↝ Q
+  r-cut        : ∀{Γ₁ Γ₂ A P Q R} (q : Γ ≃ Γ₁ + Γ₂) →
+                 P ↝ Q → cut {A} q P R ↝ cut q Q R
+  r-cong       : ∀{P R Q} → P ⊒ R → R ↝ Q → P ↝ Q
 \end{code}
 \end{AgdaAlign}
