--- a/paper/Reduction.tex
+++ b/paper/Reduction.tex
@@ -1,4 +1,9 @@
 \begin{code}[hide]%
+\>[0]\AgdaSymbol{\{-\#}\AgdaSpace{}%
+\AgdaKeyword{OPTIONS}\AgdaSpace{}%
+\AgdaPragma{--rewriting}\AgdaSpace{}%
+\AgdaSymbol{\#-\}}\<%
+\\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{Data.Bool}\AgdaSpace{}%
@@ -15,6 +20,8 @@
 \AgdaSymbol{(}\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}×\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{},\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaFunction{∃}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaRecord{Σ}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{Σ-syntax}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaFunction{∃-syntax}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
@@ -97,8 +104,8 @@
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{P}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{\#process}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{+++\#}\AgdaSpace{}%
+\AgdaFunction{↭process}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{↭concat}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{aux}\AgdaSpace{}%
 \AgdaBound{un}\AgdaSpace{}%
@@ -139,8 +146,8 @@
 \AgdaBound{P}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{weaken}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
-\AgdaFunction{+-unit-l}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
+\AgdaFunction{≫}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{aux}\AgdaSpace{}%
 \AgdaBound{un}\AgdaSpace{}%
 \AgdaBound{P}\AgdaSymbol{)}\<%
@@ -176,15 +183,15 @@
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{P}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{\#process}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{+++\#}\AgdaSpace{}%
+\AgdaFunction{↭process}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{↭concat}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{aux}\AgdaSpace{}%
 \AgdaBound{un}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{\#process}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{\#left}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{\#sym}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{+++\#}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{↭process}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{↭left}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{↭sym}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{↭concat}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)))}\AgdaSpace{}%
 \AgdaBound{P}\AgdaSymbol{))}\<%
 \\
@@ -221,7 +228,7 @@
 \\
 %
 \>[4]\AgdaFunction{aux}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{¿}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{`?}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaBound{Γ₁}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -231,16 +238,16 @@
 \AgdaBound{P}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
 \AgdaInductiveConstructor{contract}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
-\AgdaFunction{+-unit-l}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{\#process}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{\#shift}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{¿}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
+\AgdaFunction{≫}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{↭process}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{↭shift}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{`?}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{`?}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaBound{Γ₁}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{¿}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{Γ₁}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
 \AgdaBound{Γ₂}\AgdaSymbol{\})}\AgdaSpace{}%
@@ -253,21 +260,21 @@
 \AgdaKeyword{rewrite}\AgdaSpace{}%
 \AgdaFunction{sym}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{++-assoc}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{¿}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{`?}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaBound{Γ₁}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{Γ₁}\AgdaSpace{}%
 \AgdaBound{Γ₂}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
-\AgdaFunction{\#process}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{\#sym}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{\#shift}\AgdaSpace{}%
+\AgdaFunction{↭process}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{↭sym}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{↭shift}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{`?}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{Γ₁}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
-\AgdaBound{Γ₁}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{¿}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSymbol{\}))}\AgdaSpace{}%
+\AgdaBound{Γ₁}\AgdaSymbol{\}))}\AgdaSpace{}%
 \AgdaBound{P₁}\<%
 \\
 %
@@ -278,7 +285,7 @@
 \AgdaFunction{++-assoc}\AgdaSpace{}%
 \AgdaBound{Γ₁}\AgdaSpace{}%
 \AgdaBound{Γ₁}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{¿}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{`?}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaBound{Γ₂}\AgdaSymbol{)}\AgdaSpace{}%
@@ -292,8 +299,8 @@
 \AgdaSymbol{|}\AgdaSpace{}%
 \AgdaBound{P₃}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{\#process}\AgdaSpace{}%
-\AgdaFunction{\#shift}\AgdaSpace{}%
+\AgdaFunction{↭process}\AgdaSpace{}%
+\AgdaFunction{↭shift}\AgdaSpace{}%
 \AgdaBound{P₃}\<%
 \end{code}
 
@@ -326,49 +333,31 @@ The constructor \AgdaInductiveConstructor{r-link} models \RLink.
 \>[0][@{}l@{\AgdaIndent{1}}]%
 \>[2]\AgdaInductiveConstructor{r-link}%
 \>[14]\AgdaSymbol{:}%
-\>[238I]\AgdaSymbol{∀\{}\AgdaBound{Δ}\AgdaSpace{}%
+\>[243I]\AgdaSymbol{∀\{}\AgdaBound{Δ}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{P}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{B}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{Δ}\AgdaSymbol{)\}}\<%
-\\
-\>[.][@{}l@{}]\<[238I]%
-\>[16]\AgdaSymbol{(}\AgdaBound{d}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{e}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{P}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{p}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{≃}}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{,}}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{∋}}\AgdaSpace{}%
+\AgdaFunction{dual}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊳}}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-%
+\>[.][@{}l@{}]\<[243I]%
 \>[16]\AgdaInductiveConstructor{cut}\AgdaSpace{}%
-\AgdaBound{d}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{link}\AgdaSpace{}%
-\AgdaBound{e}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-r}\AgdaSpace{}%
-\AgdaInductiveConstructor{split-e}\AgdaSymbol{)))}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{>}}\AgdaSpace{}%
+\AgdaInductiveConstructor{•}\AgdaSymbol{))}\AgdaSpace{}%
 \AgdaBound{P}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{↝}}\AgdaSpace{}%
-\AgdaFunction{\#process}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{\#cons}\AgdaSpace{}%
+\AgdaFunction{↭process}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{↭concat}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{P}\<%
 \end{code}
@@ -397,10 +386,7 @@ The constructor \AgdaInductiveConstructor{r-close} models \RClose:
 %
 \>[2]\AgdaInductiveConstructor{r-close}%
 \>[14]\AgdaSymbol{:}%
-\>[277I]\AgdaSymbol{∀\{}\AgdaBound{P}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[267I]\AgdaSymbol{∀\{}\AgdaBound{P}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{p₀}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
@@ -417,13 +403,12 @@ The constructor \AgdaInductiveConstructor{r-close} models \RClose:
 \AgdaBound{Γ}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[277I]%
+\>[.][@{}l@{}]\<[267I]%
 \>[16]\AgdaInductiveConstructor{cut}\AgdaSpace{}%
-\AgdaInductiveConstructor{d-𝟙-⊥}\AgdaSpace{}%
 \AgdaBound{p₀}\AgdaSpace{}%
 \AgdaInductiveConstructor{close}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{wait}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{q₀}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{P}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{↝}}\AgdaSpace{}%
@@ -452,48 +437,17 @@ selected tag is $\InTag_1$, that is \AgdaInductiveConstructor{true} in Agda:
 
 \begin{code}%
 %
-\>[2]\AgdaInductiveConstructor{r-select-l}%
+\>[2]\AgdaInductiveConstructor{r-left}%
 \>[14]\AgdaSymbol{:}%
-\>[305I]\AgdaSymbol{∀\{}\AgdaBound{Γ₁}\AgdaSpace{}%
+\>[291I]\AgdaSymbol{∀\{}\AgdaBound{Γ₁}\AgdaSpace{}%
 \AgdaBound{Γ₂}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{A′}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
-\AgdaBound{B′}\AgdaSymbol{\}}\<%
+\AgdaBound{P}\AgdaSpace{}%
+\AgdaBound{Q}\AgdaSpace{}%
+\AgdaBound{R}\AgdaSymbol{\}}\<%
 \\
-\>[.][@{}l@{}]\<[305I]%
-\>[16]\AgdaSymbol{\{}\AgdaBound{P}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{Γ₁}\AgdaSymbol{)\}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{Q}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{A′}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{Γ₂}\AgdaSymbol{)\}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{R}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{B′}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{Γ₂}\AgdaSymbol{)\}}\<%
-\\
-%
-\>[16]\AgdaSymbol{(}\AgdaBound{d}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{A′}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{e}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\AgdaBound{B′}\AgdaSymbol{)}\<%
-\\
-%
+\>[.][@{}l@{}]\<[291I]%
 \>[16]\AgdaSymbol{(}\AgdaBound{p}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
@@ -518,28 +472,24 @@ selected tag is $\InTag_1$, that is \AgdaInductiveConstructor{true} in Agda:
 \AgdaSymbol{→}\<%
 \\
 %
-\>[16]\AgdaInductiveConstructor{cut}%
-\>[358I]\AgdaSymbol{(}\AgdaInductiveConstructor{d-⊕-\&}\AgdaSpace{}%
-\AgdaBound{d}\AgdaSpace{}%
-\AgdaBound{e}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{p}\<%
-\\
-\>[.][@{}l@{}]\<[358I]%
-\>[20]\AgdaSymbol{(}\AgdaInductiveConstructor{select}\AgdaSpace{}%
-\AgdaInductiveConstructor{true}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
+\>[16]\AgdaInductiveConstructor{cut}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⊕}}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{p}%
+\>[323I]\AgdaSymbol{(}\AgdaInductiveConstructor{left}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{p₀}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{P}\AgdaSymbol{)}\<%
 \\
-%
-\>[20]\AgdaSymbol{(}\AgdaInductiveConstructor{case}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[323I]%
+\>[30]\AgdaSymbol{(}\AgdaInductiveConstructor{case}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{q₀}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{Q}\AgdaSpace{}%
 \AgdaBound{R}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{↝}}\AgdaSpace{}%
 \AgdaInductiveConstructor{cut}\AgdaSpace{}%
-\AgdaBound{d}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{P}\AgdaSpace{}%
 \AgdaBound{Q}\<%
@@ -554,49 +504,18 @@ the one restricted by the cut.
 
 \begin{code}[hide]%
 %
-\>[2]\AgdaInductiveConstructor{r-select-r}%
-\>[14]\AgdaSymbol{:}\<%
-\\
-\>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaSymbol{∀\{}\AgdaBound{Γ₁}\AgdaSpace{}%
+\>[2]\AgdaInductiveConstructor{r-right}%
+\>[14]\AgdaSymbol{:}%
+\>[336I]\AgdaSymbol{∀\{}\AgdaBound{Γ₁}\AgdaSpace{}%
 \AgdaBound{Γ₂}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{A′}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
-\AgdaBound{B′}\AgdaSymbol{\}}\<%
+\AgdaBound{P}\AgdaSpace{}%
+\AgdaBound{Q}\AgdaSpace{}%
+\AgdaBound{R}\AgdaSymbol{\}}\<%
 \\
-%
-\>[4]\AgdaSymbol{\{}\AgdaBound{P}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{B}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{Γ₁}\AgdaSymbol{)\}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{Q}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{A′}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{Γ₂}\AgdaSymbol{)\}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{R}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{B′}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{Γ₂}\AgdaSymbol{)\}}\<%
-\\
-%
-\>[4]\AgdaSymbol{(}\AgdaBound{d}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{A′}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{e}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\AgdaBound{B′}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{p}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[336I]%
+\>[16]\AgdaSymbol{(}\AgdaBound{p}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{≃}}\AgdaSpace{}%
@@ -620,82 +539,43 @@ the one restricted by the cut.
 \AgdaSymbol{→}\<%
 \\
 %
-\>[4]\AgdaInductiveConstructor{cut}%
-\>[429I]\AgdaSymbol{(}\AgdaInductiveConstructor{d-⊕-\&}\AgdaSpace{}%
-\AgdaBound{d}\AgdaSpace{}%
-\AgdaBound{e}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{p}\<%
-\\
-\>[.][@{}l@{}]\<[429I]%
-\>[8]\AgdaSymbol{(}\AgdaInductiveConstructor{select}\AgdaSpace{}%
-\AgdaInductiveConstructor{false}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
+\>[16]\AgdaInductiveConstructor{cut}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⊕}}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{p}%
+\>[368I]\AgdaSymbol{(}\AgdaInductiveConstructor{right}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{p₀}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{P}\AgdaSymbol{)}\<%
 \\
-%
-\>[8]\AgdaSymbol{(}\AgdaInductiveConstructor{case}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[368I]%
+\>[30]\AgdaSymbol{(}\AgdaInductiveConstructor{case}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{q₀}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{Q}\AgdaSpace{}%
 \AgdaBound{R}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{↝}}\AgdaSpace{}%
 \AgdaInductiveConstructor{cut}\AgdaSpace{}%
-\AgdaBound{e}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{P}\AgdaSpace{}%
 \AgdaBound{R}\<%
 \\
 %
-\\[\AgdaEmptyExtraSkip]%
-%
 \>[2]\AgdaInductiveConstructor{r-fork}%
-\>[14]\AgdaSymbol{:}\<%
-\\
-\>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaSymbol{∀\{}\AgdaBound{Γ₁}\AgdaSpace{}%
+\>[14]\AgdaSymbol{:}%
+\>[381I]\AgdaSymbol{∀\{}\AgdaBound{Γ₁}\AgdaSpace{}%
 \AgdaBound{Γ₂}\AgdaSpace{}%
 \AgdaBound{Γ₃}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
-\AgdaBound{A′}\AgdaSpace{}%
-\AgdaBound{B′}\AgdaSymbol{\}}\<%
+\AgdaBound{P}\AgdaSpace{}%
+\AgdaBound{Q}\AgdaSpace{}%
+\AgdaBound{R}\AgdaSymbol{\}}\<%
 \\
-%
-\>[4]\AgdaSymbol{\{}\AgdaBound{P}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{Γ₁}\AgdaSymbol{)\}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{Q}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{B}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{Γ₂}\AgdaSymbol{)\}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{R}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{B′}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{A′}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{Γ₃}\AgdaSymbol{)\}}\<%
-\\
-%
-\>[4]\AgdaSymbol{(}\AgdaBound{d}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{A′}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{e}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\AgdaBound{B′}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{p}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[381I]%
+\>[16]\AgdaSymbol{(}\AgdaBound{p}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{≃}}\AgdaSpace{}%
@@ -708,10 +588,8 @@ the one restricted by the cut.
 \AgdaOperator{\AgdaDatatype{≃}}\AgdaSpace{}%
 \AgdaInductiveConstructor{[]}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{+}}\AgdaSpace{}%
-\AgdaBound{Γ₃}\AgdaSymbol{)}\<%
-\\
-%
-\>[4]\AgdaSymbol{(}\AgdaBound{q}\AgdaSpace{}%
+\AgdaBound{Γ₃}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{q}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{≃}}\AgdaSpace{}%
@@ -728,7 +606,7 @@ the one restricted by the cut.
 \AgdaSymbol{→}\<%
 \\
 %
-\>[4]\AgdaKeyword{let}\AgdaSpace{}%
+\>[16]\AgdaKeyword{let}\AgdaSpace{}%
 \AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{p′}\AgdaSpace{}%
@@ -741,70 +619,44 @@ the one restricted by the cut.
 \AgdaKeyword{in}\<%
 \\
 %
-\>[4]\AgdaInductiveConstructor{cut}%
-\>[520I]\AgdaSymbol{(}\AgdaInductiveConstructor{d-⊗-⅋}\AgdaSpace{}%
-\AgdaBound{d}\AgdaSpace{}%
-\AgdaBound{e}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{p}\<%
-\\
-\>[.][@{}l@{}]\<[520I]%
-\>[8]\AgdaSymbol{(}\AgdaInductiveConstructor{fork}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
+\>[16]\AgdaInductiveConstructor{cut}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⊗}}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{p}%
+\>[432I]\AgdaSymbol{(}\AgdaInductiveConstructor{fork}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{q₀}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{q}\AgdaSpace{}%
 \AgdaBound{P}\AgdaSpace{}%
 \AgdaBound{Q}\AgdaSymbol{)}\<%
 \\
-%
-\>[8]\AgdaSymbol{(}\AgdaInductiveConstructor{join}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[432I]%
+\>[30]\AgdaSymbol{(}\AgdaInductiveConstructor{join}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{p₀}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{R}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{↝}}\AgdaSpace{}%
 \AgdaInductiveConstructor{cut}\AgdaSpace{}%
-\AgdaBound{d}\AgdaSpace{}%
 \AgdaBound{q′}\AgdaSpace{}%
 \AgdaBound{P}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{cut}\AgdaSpace{}%
-\AgdaBound{e}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-r}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{>}}\AgdaSpace{}%
 \AgdaBound{p′}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{Q}\AgdaSpace{}%
 \AgdaBound{R}\AgdaSymbol{)}\<%
 \\
 %
-\\[\AgdaEmptyExtraSkip]%
-%
 \>[2]\AgdaInductiveConstructor{r-client}%
-\>[14]\AgdaSymbol{:}\<%
-\\
-\>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaSymbol{∀\{}\AgdaBound{Γ₁}\AgdaSpace{}%
+\>[14]\AgdaSymbol{:}%
+\>[450I]\AgdaSymbol{∀\{}\AgdaBound{Γ₁}\AgdaSpace{}%
 \AgdaBound{Γ₂}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{A′}\AgdaSymbol{\}}\<%
+\AgdaBound{P}\AgdaSpace{}%
+\AgdaBound{Q}\AgdaSymbol{\}}\<%
 \\
-%
-\>[4]\AgdaSymbol{\{}\AgdaBound{P}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{Γ₁}\AgdaSymbol{)\}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{Q}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{A′}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{Γ₂}\AgdaSymbol{)\}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{d}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{A′}\AgdaSymbol{)}\<%
-\\
-%
-\>[4]\AgdaSymbol{(}\AgdaBound{p}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[450I]%
+\>[16]\AgdaSymbol{(}\AgdaBound{p}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{≃}}\AgdaSpace{}%
@@ -832,61 +684,36 @@ the one restricted by the cut.
 \AgdaSymbol{→}\<%
 \\
 %
-\>[4]\AgdaInductiveConstructor{cut}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{d-!-?}\AgdaSpace{}%
-\AgdaBound{d}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{p}\<%
-\\
-\>[4][@{}l@{\AgdaIndent{0}}]%
-\>[6]\AgdaSymbol{(}\AgdaInductiveConstructor{server}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
+\>[16]\AgdaInductiveConstructor{cut}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{`!}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{server}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{p₀}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{un}\AgdaSpace{}%
-\AgdaBound{P}\AgdaSymbol{)}\<%
-\\
-%
-\>[6]\AgdaSymbol{(}\AgdaInductiveConstructor{client}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
+\AgdaBound{P}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{client}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{q₀}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{Q}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{↝}}\AgdaSpace{}%
 \AgdaInductiveConstructor{cut}\AgdaSpace{}%
-\AgdaBound{d}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaBound{P}\AgdaSpace{}%
 \AgdaBound{Q}\<%
 \\
 %
-\\[\AgdaEmptyExtraSkip]%
-%
 \>[2]\AgdaInductiveConstructor{r-weaken}%
-\>[14]\AgdaSymbol{:}\<%
-\\
-\>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaSymbol{∀\{}\AgdaBound{Γ₁}\AgdaSpace{}%
+\>[14]\AgdaSymbol{:}%
+\>[497I]\AgdaSymbol{∀\{}\AgdaBound{Γ₁}\AgdaSpace{}%
 \AgdaBound{Γ₂}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{A′}\AgdaSymbol{\}}\<%
+\AgdaBound{P}\AgdaSpace{}%
+\AgdaBound{Q}\AgdaSymbol{\}}\<%
 \\
-%
-\>[4]\AgdaSymbol{\{}\AgdaBound{P}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{Γ₁}\AgdaSymbol{)\}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{Q}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
-\AgdaBound{Γ₂}\AgdaSymbol{\}}\<%
-\\
-%
-\>[4]\AgdaSymbol{(}\AgdaBound{d}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{A′}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{p}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[497I]%
+\>[16]\AgdaSymbol{(}\AgdaBound{p}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{≃}}\AgdaSpace{}%
@@ -914,21 +741,19 @@ the one restricted by the cut.
 \AgdaSymbol{→}\<%
 \\
 %
-\>[4]\AgdaInductiveConstructor{cut}%
-\>[645I]\AgdaSymbol{(}\AgdaInductiveConstructor{d-!-?}\AgdaSpace{}%
-\AgdaBound{d}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{p}\<%
-\\
-\>[.][@{}l@{}]\<[645I]%
-\>[8]\AgdaSymbol{(}\AgdaInductiveConstructor{server}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
+\>[16]\AgdaInductiveConstructor{cut}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{`!}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{p}%
+\>[530I]\AgdaSymbol{(}\AgdaInductiveConstructor{server}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{p₀}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{un}\AgdaSpace{}%
 \AgdaBound{P}\AgdaSymbol{)}\<%
 \\
-%
-\>[8]\AgdaSymbol{(}\AgdaInductiveConstructor{weaken}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[530I]%
+\>[29]\AgdaSymbol{(}\AgdaInductiveConstructor{weaken}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{q₀}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{Q}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{↝}}\AgdaSpace{}%
@@ -938,42 +763,16 @@ the one restricted by the cut.
 \AgdaBound{Q}\<%
 \\
 %
-\\[\AgdaEmptyExtraSkip]%
-%
 \>[2]\AgdaInductiveConstructor{r-contract}%
-\>[14]\AgdaSymbol{:}\<%
-\\
-\>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaSymbol{∀\{}\AgdaBound{Γ₁}\AgdaSpace{}%
+\>[14]\AgdaSymbol{:}%
+\>[543I]\AgdaSymbol{∀\{}\AgdaBound{Γ₁}\AgdaSpace{}%
 \AgdaBound{Γ₂}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{A′}\AgdaSymbol{\}}\<%
+\AgdaBound{P}\AgdaSpace{}%
+\AgdaBound{Q}\AgdaSymbol{\}}\<%
 \\
-%
-\>[4]\AgdaSymbol{\{}\AgdaBound{P}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{Γ₁}\AgdaSymbol{)\}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{Q}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{¿}\AgdaSpace{}%
-\AgdaBound{A′}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaInductiveConstructor{¿}\AgdaSpace{}%
-\AgdaBound{A′}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{Γ₂}\AgdaSymbol{)\}}\<%
-\\
-%
-\>[4]\AgdaSymbol{(}\AgdaBound{d}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{A′}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{p}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[543I]%
+\>[16]\AgdaSymbol{(}\AgdaBound{p}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{≃}}\AgdaSpace{}%
@@ -1001,55 +800,101 @@ the one restricted by the cut.
 \AgdaSymbol{→}\<%
 \\
 %
-\>[4]\AgdaInductiveConstructor{cut}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{d-!-?}\AgdaSpace{}%
-\AgdaBound{d}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{p}\<%
-\\
-\>[4][@{}l@{\AgdaIndent{0}}]%
-\>[6]\AgdaSymbol{(}\AgdaInductiveConstructor{server}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
+\>[16]\AgdaInductiveConstructor{cut}%
+\>[573I]\AgdaSymbol{\{}\AgdaInductiveConstructor{`!}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{p}%
+\>[576I]\AgdaSymbol{(}\AgdaInductiveConstructor{server}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{p₀}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{un}\AgdaSpace{}%
 \AgdaBound{P}\AgdaSymbol{)}\<%
 \\
-%
-\>[6]\AgdaSymbol{(}\AgdaInductiveConstructor{contract}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[576I]%
+\>[29]\AgdaSymbol{(}\AgdaInductiveConstructor{contract}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{q₀}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{Q}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{↝}}\<%
 \\
-%
-\>[6]\AgdaFunction{contraction}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[573I]%
+\>[20]\AgdaFunction{contraction}\AgdaSpace{}%
 \AgdaBound{un}\AgdaSpace{}%
 \AgdaBound{p}\<%
 \\
-\>[6][@{}l@{\AgdaIndent{0}}]%
-\>[8]\AgdaSymbol{(}\AgdaInductiveConstructor{cut}%
-\>[721I]\AgdaSymbol{(}\AgdaInductiveConstructor{d-!-?}\AgdaSpace{}%
-\AgdaBound{d}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaFunction{++≃+}\<%
-\\
-\>[.][@{}l@{}]\<[721I]%
-\>[13]\AgdaSymbol{(}\AgdaInductiveConstructor{server}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
+\>[20][@{}l@{\AgdaIndent{0}}]%
+\>[22]\AgdaSymbol{(}\AgdaInductiveConstructor{cut}\AgdaSpace{}%
+\AgdaFunction{++≃+}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{server}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{p₀}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{un}\AgdaSpace{}%
 \AgdaBound{P}\AgdaSymbol{)}\<%
 \\
 %
-\>[13]\AgdaSymbol{(}\AgdaInductiveConstructor{cut}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{d-!-?}\AgdaSpace{}%
-\AgdaBound{d}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-r}\AgdaSpace{}%
+\>[22]\AgdaSymbol{(}\AgdaInductiveConstructor{cut}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{>}}\AgdaSpace{}%
 \AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{server}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{split-l}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
 \AgdaBound{p₀}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{un}\AgdaSpace{}%
 \AgdaBound{P}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{Q}\AgdaSymbol{))}\<%
+\\
+%
+\>[2]\AgdaInductiveConstructor{r-poly}%
+\>[15]\AgdaSymbol{:}%
+\>[601I]\AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSpace{}%
+\AgdaBound{Γ₁}\AgdaSpace{}%
+\AgdaBound{Γ₂}\AgdaSpace{}%
+\AgdaBound{P}\AgdaSpace{}%
+\AgdaBound{F}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{p}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{≃}}\AgdaSpace{}%
+\AgdaBound{Γ₁}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{+}}\AgdaSpace{}%
+\AgdaBound{Γ₂}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{p₀}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{Γ₁}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{≃}}\AgdaSpace{}%
+\AgdaInductiveConstructor{[]}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{+}}\AgdaSpace{}%
+\AgdaBound{Γ₁}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{q₀}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{Γ₂}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{≃}}\AgdaSpace{}%
+\AgdaInductiveConstructor{[]}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{+}}\AgdaSpace{}%
+\AgdaBound{Γ₂}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{->}\<%
+\\
+\>[.][@{}l@{}]\<[601I]%
+\>[17]\AgdaInductiveConstructor{cut}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{`∃}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{ex}\AgdaSpace{}%
+\AgdaSymbol{\{\AgdaUnderscore{}\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
+\AgdaBound{p₀}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{P}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{all}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{<}}\AgdaSpace{}%
+\AgdaBound{q₀}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{F}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{↝}}\AgdaSpace{}%
+\AgdaInductiveConstructor{cut}\AgdaSpace{}%
+\AgdaBound{p}\AgdaSpace{}%
+\AgdaBound{P}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{F}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{)}\<%
 \end{code}
 
 Reduction is closed under cuts and by structural pre-congruence as per \RCut and
@@ -1059,31 +904,13 @@ below:
 \begin{code}%
 %
 \>[2]\AgdaInductiveConstructor{r-cut}%
-\>[14]\AgdaSymbol{:}%
-\>[738I]\AgdaSymbol{∀\{}\AgdaBound{Γ₁}\AgdaSpace{}%
+\>[15]\AgdaSymbol{:}%
+\>[648I]\AgdaSymbol{∀\{}\AgdaBound{Γ₁}\AgdaSpace{}%
 \AgdaBound{Γ₂}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{P}\AgdaSpace{}%
+\AgdaBound{P}\AgdaSpace{}%
 \AgdaBound{Q}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{Γ₁}\AgdaSymbol{)\}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{R}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{B}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaBound{Γ₂}\AgdaSymbol{)\}}\<%
-\\
-\>[.][@{}l@{}]\<[738I]%
-\>[16]\AgdaSymbol{(}\AgdaBound{d}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{R}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{q}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
@@ -1091,36 +918,30 @@ below:
 \AgdaBound{Γ₁}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{+}}\AgdaSpace{}%
 \AgdaBound{Γ₂}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaBound{P}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{↝}}\AgdaSpace{}%
-\AgdaBound{Q}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-%
-\>[16]\AgdaInductiveConstructor{cut}\AgdaSpace{}%
-\AgdaBound{d}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[648I]%
+\>[17]\AgdaBound{P}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{↝}}\AgdaSpace{}%
+\AgdaBound{Q}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaInductiveConstructor{cut}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaBound{q}\AgdaSpace{}%
 \AgdaBound{P}\AgdaSpace{}%
 \AgdaBound{R}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{↝}}\AgdaSpace{}%
 \AgdaInductiveConstructor{cut}\AgdaSpace{}%
-\AgdaBound{d}\AgdaSpace{}%
 \AgdaBound{q}\AgdaSpace{}%
 \AgdaBound{Q}\AgdaSpace{}%
 \AgdaBound{R}\<%
 \\
 %
-\\[\AgdaEmptyExtraSkip]%
-%
 \>[2]\AgdaInductiveConstructor{r-cong}%
-\>[14]\AgdaSymbol{:}\AgdaSpace{}%
+\>[15]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀\{}\AgdaBound{P}\AgdaSpace{}%
 \AgdaBound{R}\AgdaSpace{}%
-\AgdaBound{Q}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Process}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{Q}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{P}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊒}}\AgdaSpace{}%
