--- a/paper/agda.tex
+++ b/paper/agda.tex
@@ -6,6 +6,6 @@
 \input{Permutations}
 \input{Process}
 \input{Congruence}
-% \input{Reduction}
+\input{Reduction}
 % \input{DeadlockFreedom}
 % \input{Safety}
